objects/Social_Support_Survey__c.object
<CustomObject>
    <description>Created for Marketing Cloud Survey</description>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SOCSUPPs</relationshipLabel>
        <relationshipName>Social_Support_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>created for marketing cloud survey.</description>
        <label>Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_on_my_friend_when_things_go_wrong__c</fullName>
        <description>I can count on my friend when things go wrong.</description>
        <inlineHelpText>I can count on my friend when things go wrong.</inlineHelpText>
        <label>SOCSUPP_v1.0.10</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>created for marketing cloud survey.</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Emotional_help_and_support_from_family__c</fullName>
        <description>I get the emotional help and support I need from my family</description>
        <inlineHelpText>I get the emotional help and support I need from my family</inlineHelpText>
        <label>SOCSUPP_v1.0.7</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feel_isolated_from_others__c</fullName>
        <description>How often do you feel isolated from others?</description>
        <inlineHelpText>How often do you feel isolated from others?</inlineHelpText>
        <label>SOCSUPP_v1.0.3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Friends_to_share_my_joys_and_sorrows__c</fullName>
        <description>I have friends with whom I can share my joys and sorrows.</description>
        <inlineHelpText>I have friends with whom I can share my joys and sorrows.</inlineHelpText>
        <label>SOCSUPP_v1.0.12</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_often_do_you_feel_left_out__c</fullName>
        <description>How often do you feel left out?</description>
        <inlineHelpText>How often do you feel left out?</inlineHelpText>
        <label>SOCSUPP_v1.0.2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lack_companionship__c</fullName>
        <description>How often do you feel you lack companionship?</description>
        <inlineHelpText>How often do you feel you lack companionship?</inlineHelpText>
        <label>SOCSUPP_v1.0.1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_family_help_me_make_decisions__c</fullName>
        <description>My family is willing to help me make decisions.</description>
        <inlineHelpText>My family is willing to help me make decisions.</inlineHelpText>
        <label>SOCSUPP_v1.0.14</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_family_really_tries_to_help_me__c</fullName>
        <description>My family really tries to help me.</description>
        <inlineHelpText>My family really tries to help me.</inlineHelpText>
        <label>SOCSUPP_v1.0.6</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_friends_really_try_to_help_me__c</fullName>
        <description>My friends really try to help me.</description>
        <inlineHelpText>My friends really try to help me.</inlineHelpText>
        <label>SOCSUPP_v1.0.9</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Person__c</fullName>
        <description>There is a special person who is around when I need them.</description>
        <inlineHelpText>There is a special person who is around when I need them.</inlineHelpText>
        <label>SOCSUPP_v1.0.4</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Person_source_of_comfort__c</fullName>
        <description>I have a special person who is a real source of comfort to me.</description>
        <inlineHelpText>I have a special person who is a real source of comfort to me.</inlineHelpText>
        <label>SOCSUPP_v1.0.8</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Person_to_share_joys_and_sorrows__c</fullName>
        <description>There is a special person with whom I can share my joys and sorrows.</description>
        <inlineHelpText>There is a special person with whom I can share my joys and sorrows.</inlineHelpText>
        <label>SOCSUPP_v1.0.5</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Person_who_care_about_Feelings__c</fullName>
        <description>There is a special person in my life who cares about my feelings</description>
        <inlineHelpText>There is a special person in my life who cares about my feelings</inlineHelpText>
        <label>SOCSUPP_v1.0.13</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Talk_about_my_problems_with_my_family__c</fullName>
        <description>I can talk about my problems with my family.</description>
        <inlineHelpText>I can talk about my problems with my family.</inlineHelpText>
        <label>SOCSUPP_v1.0.11</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Talk_about_my_problems_with_my_friends__c</fullName>
        <description>I can talk about my problems with my friends</description>
        <inlineHelpText>I can talk about my problems with my friends</inlineHelpText>
        <label>SOCSUPP_v1.0.15</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>SOCSUPP</label>
    <nameField>
        <displayFormat>SOCSUPP-{0000000000}</displayFormat>
        <label>SOCSUPP Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SOCSUPPs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>